--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,103 +7,104 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <div class="image_add">
-    <img src="../../assets/images/contact.jpg"></div> -->
-    
-    <!-- <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong">
-        
-        <div class="container-fluid">
-          
-      
-          
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-mdb-toggle="collapse"
-            data-mdb-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <i class="fas fa-bars"></i>
-          </button>
-      
-         
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            
-            
-            <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                <img
-                  src="../../assets/images/company_logo.png"
-                  height="40"
-                  alt="MDB Logo"
-                  loading="lazy"
-                />
-              </a>
-           
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-    
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              
-              
-            </ul>
-            
-          </div>
-          
-        </div>
-       
-      </nav> -->
-      
+     <div class="image_add">
       <div class="text">
         <h1>Contact Us</h1>
         <p>At Gadgeon we believe in transparent communication and have built various touchpoints through which our stakeholders can get in touch with us.
-
         </p>
       </div>
+    </div>
 
-      <div class="form">
-        <div class="container contact-form">
-          <div class="contact-image">
-              <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
-          </div>
-          <form method="post">
-              <h3>Drop Us a Message</h3>
-             <div class="row">
-                  <div class="col-md-6">
-                      <div class="form-group">
-                          <input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" />
-                      </div>
-                      <div class="form-group">
-                          <input type="text" name="txtEmail" class="form-control" placeholder="Your Email *" value="" />
-                      </div>
-                      <div class="form-group">
-                          <input type="text" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" />
-                      </div>
-                      <div class="form-group">
-                          <input type="submit" name="btnSubmit" class="btnContact" value="Send Message" />
-                      </div>
-                  </div>
-                  <div class="col-md-6">
-                      <div class="form-group">
-                          <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
-                      </div>
-                  </div>
+
+
+    <div class="container contact">
+
+      <div class="row">
+  
+          <div class="col-md-3">
+  
+              <div class="contact-info">
+  
+                  <img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image"/>
+  
+                  <h2>Contact Us</h2>
+  
+                  <h4>We would love to hear from you !</h4>
+  
               </div>
-          </form>
-</div>
+  
+          </div>
+  
+          <div class="col-md-9">
+  
+              <div class="contact-form">
+  
+                  <div class="form-group">
+  
+                    <label class="control-label col-sm-2" for="fname">First Name:</label>
+  
+                    <div class="col-sm-10">          
+  
+                      <input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname">
+  
+                    </div>
+  
+                  </div>
+  
+                  <div class="form-group">
+  
+                    <label class="control-label col-sm-2" for="lname">Last Name:</label>
+  
+                    <div class="col-sm-10">          
+  
+                      <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname">
+  
+                    </div>
+  
+                  </div>
+  
+                  <div class="form-group">
+  
+                    <label class="control-label col-sm-2" for="email">Email:</label>
+  
+                    <div class="col-sm-10">
+  
+                      <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+  
+                    </div>
+  
+                  </div>
+  
+                  <div class="form-group">
+  
+                    <label class="control-label col-sm-2" for="comment">Comment:</label>
+  
+                    <div class="col-sm-10">
+  
+                      <textarea class="form-control" rows="5" id="comment"></textarea>
+  
+                    </div>
+  
+                  </div>
+  
+                  <div class="form-group">        
+  
+                    <div class="col-sm-offset-2 col-sm-10">
+  
+                      <button type="submit" class="btn btn-default">Submit</button>
+  
+                    </div>
+  
+                  </div>
+  
+              </div>
+  
+          </div>
+  
       </div>
+  
+  </div>
     
+   
 </body>
 </html>
