--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -2,25 +2,29 @@ body{
     padding: 0px;
     height:850px;
     margin: 0px;
+    background-color: silver;
+    display: flex;
+    flex-wrap: wrap;
+
 
 }
-.main {
-    height: 850px;;
-    width: 100%;
-    background-color: aqua;
-}
 
-/* .image {
+
+
+ .image {
     background-image: url("../../assets/images/about.jpg");
-    height: 350px;
-    background-size: contain;
+     height: 450px; 
+    background-size: cover;
     background-repeat: no-repeat;
-} */
+    width: 1520px;
+} 
 
 
 h1 {
     /* margin-top: 350px;
     padding-left: 70px; */
+    padding-top: 350px;
+    margin-left: 50px;
     color: white;
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
@@ -28,7 +32,10 @@ h1 {
 p {
     /* margin-top: 100px; */
     padding-left: 60px;
+    padding-top: 50px;
     margin: 0px;
+    text-align: justify;
+    margin-right:20px ;
 }
 
 .para {
