--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,15 +1,28 @@
 body{
-    padding: 0px;
-     background-image: url("../../assets/images/contact.jpg"); 
-    background-size: contain;
-    background-repeat: no-repeat;
-    height:850px;
+    padding: 0px;    
+     min-height: 100vh;
+    max-width: 100vw; 
+    /* background-color: aqua; */
+    display: flex;
+    flex-wrap: wrap;
     margin: 0px;
+}
+
+
+.image_add {
+    background-image: url("../../assets/images/contact.jpg"); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* min-height: 100vh; */
+    height: 350px;
+    width: 100%;
+    
 }
 
 .text {
     width: 100%;
     height: 200px;
+    padding-top: 200px;
     /* background-color: blue; */
 }
 
@@ -18,7 +31,7 @@ h1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     /* margin-top: 350px; */
     text-align: center;
-    margin-top: 100px;
+    /* margin-top: 100px; */
 }
 
 p {
@@ -27,60 +40,41 @@ p {
     text-align: center;
 }
 
-.form {
-    width: 100%;
-    height: 700px;
-    background-color: chartreuse;
+
+.contact{
+    padding: 4%;
+    height: 400px;
 }
-
-
-.contact-form{
+.col-md-3{
+    background: #ff9b00;
+    padding: 4%;
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+}
+.contact-info{
+    margin-top:10%;
+}
+.contact-info img{
+    margin-bottom: 15%;
+}
+.contact-info h2{
+    margin-bottom: 10%;
+}
+.col-md-9{
     background: #fff;
-    margin-top: 10%;
-    margin-bottom: 5%;
-    width: 70%;
+    padding: 3%;
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
 }
-.contact-form .form-control{
-    border-radius:1rem;
+.contact-form label{
+    font-weight:600;
 }
-.contact-image{
-    text-align: center;
-}
-.contact-image img{
-    border-radius: 6rem;
-    width: 11%;
-    margin-top: -3%;
-    transform: rotate(29deg);
-}
-.contact-form form{
-    padding: 14%;
-}
-.contact-form form .row{
-    margin-bottom: -7%;
-}
-.contact-form h3{
-    margin-bottom: 8%;
-    margin-top: -10%;
-    text-align: center;
-    color: #0062cc;
-}
-.contact-form .btnContact {
-    width: 50%;
-    border: none;
-    border-radius: 1rem;
-    padding: 1.5%;
-    background: #dc3545;
+.contact-form button{
+    background: #25274d;
+    color: #fff;
     font-weight: 600;
-    color: #fff;
-    cursor: pointer;
+    width: 25%;
 }
-.btnContactSubmit
-{
-    width: 50%;
-    border-radius: 1rem;
-    padding: 1.5%;
-    color: #fff;
-    background-color: #0062cc;
-    border: none;
-    cursor: pointer;
+.contact-form button:focus{
+    box-shadow:none;
 }
