--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,8 +5,12 @@ body{
     background-image: url("../../assets/images/home.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    height:850px;
+    /* height:850px; */
+    min-height: 100vh;
+    max-width: 100vw;
     margin: 0px;
+    display: flex;
+    flex-wrap: wrap;
 
 }
 
