--- a/src/app/services/services.component.css
+++ b/src/app/services/services.component.css
@@ -1,22 +1,43 @@
 body{
     padding: 0px;
-     background-image: url("../../assets/images/service.jpg"); 
-    background-size: contain;
-    background-repeat: no-repeat;
-    height:1200px;
+    min-height: 100vh;
+    max-width: 100vw;
     margin: 0px;
+    /* background-color: aqua; */
+    display: flex;
+    flex-wrap: wrap;
 }
 
+.image {
+    background-image: url("../../assets/images/service.jpg"); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* height: 100vh;
+    padding: 0px; */
+    width: 100%;
+}
+
+/* .content {
+    background-color: aqua;
+} */
+
 h1 {
-    margin-top: 350px;
+      /* margin-top: 350px;   */
     padding-left: 70px;
-    color: white;
+    color:white;
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
+.heading {
+    padding-top: 420px;
+}
+
+
 p {
-    margin-top: 100px;
+    /* margin-top: 100px; */
     padding-left: 60px;
+    text-align: justify;
+    padding-top: 30px;
 }
 
 .service_list {
