--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -7,67 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <div class="image_add">
-    <img src="../../assets/images/contact.jpg"></div> -->
-    
-    <!-- <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong">
-        
-        <div class="container-fluid">
-          
-      
-          
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-mdb-toggle="collapse"
-            data-mdb-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <i class="fas fa-bars"></i>
-          </button>
-      
-          
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            
-            
-            <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                <img
-                  src="../../assets/images/company_logo.png"
-                  height="40"
-                  alt="MDB Logo"
-                  loading="lazy"
-                />
-              </a>
-            
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-    
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              
-              
-            </ul>
-            
-          </div>
-          
-        </div>
-        
-      </nav> -->
-      
+      <div class="image">
+       <div class="heading"> <h1>Professional Services</h1></div>
+      </div>
       <div class="content">
-        <h1>Professional Services</h1>
+        
         <p>Talent sourcing via partner model is a well-established practice in the industry. Enterprises need a technology partner who is reliable and experienced like Gadgeon to meet the talent<br> challenges quickly and effectively. We offer multiple project engagement models with flexibility and high success rates like staff augmentation – hiring a developer model; fixed cost,<br> time & cost model; and managed agile team.
         <br><br>
         Extended Engineering team is a joint journey where Gadgeon guides our customers by following a phased industry-standard framework for transition, service delivery, and continuous<br> optimization. This model involves teams that are a true extension to the client's team and are mainly placed at Gadgeon's offshore development location(s). It allows maximum flexibility<br> in the execution of multiple projects using the best-fit pricing model.
